--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
-fastapi
-uvicorn
-tensorflow
-tensorflow-hub
-pillow
-numpy
-pydantic
-pickle5
-transformers
-nest_asyncio
-pickle-mixin
-opencv-python
+# FastAPI & Serveur ASGI# FastAPI & Serveur ASGI
+fastapi==0.95.1
+uvicorn==0.23.2
+pydantic==1.10.7  # Validation des données pour FastAPI
+
+
+# Machine Learning & Deep Learning
+tensorflow-cpu==2.12.0  # Version optimisée pour éviter les problèmes de mémoire
+tensorflow-hub==0.13.0  # Module pour Universal Sentence Encoder (USE)
+transformers==4.28.1  # Pour BertTokenizer
+
+# Manipulation des données
+numpy==1.23.5
+pandas==1.5.3
+scikit-learn==1.2.2  # Pour encodage des labels et métriques
+
+# Traitement d'images
+Pillow==9.4.0
+opencv-python-headless==4.7.0.72  # Version "headless" optimisée pour les serveurs
+
+# Sérialisation des modèles
+pickle5==0.0.11  # Manipulation des fichiers .pkl
+pickle-mixin==1.0.2  # Seulement en cas d'erreur de pickle
+
+# Gestion des tâches asynchrones
+nest_asyncio==1.5.6  # Pour éviter les conflits AsyncIO sur les notebooks
+
+# Web Scraping (si nécessaire pour récupérer des images)
+beautifulsoup4==4.11.1
+requests==2.28.2
